Fixed .titlebar-buttonbox-container not showing when URL bar is focused

--- a/userChrome.css
+++ b/userChrome.css
@@ -98,6 +98,10 @@
 		top: 0px;
 		transition-delay: 0ms;
 	}
+	toolbox:focus-within .titlebar-buttonbox-container {
+		display: block !important;
+		position: absolute !important;
+	}
 	/* Add padding for window controls */
 	#PanelUI-button,
 	#personal-bookmarks {
